--- a/No.6/api/package.json
+++ b/No.6/api/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@google/clasp": "^2.4.1",
+    "@types/google-apps-script": "^1.0.53",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "npm-run-all": "^4.1.5",
