--- a/No.6/client/requirements.txt
+++ b/No.6/client/requirements.txt
@@ -4,3 +4,4 @@ google-auth==2.10.0
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.5.2
 googleapis-common-protos==1.56.4
+opencv-python==4.5.1.48
